--- a/lesson1/node-express/package.json
+++ b/lesson1/node-express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-http",
+  "name": "node-express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,5 +8,8 @@
     "start": "node index"
   },
   "author": "Abhishek",
-  "license": "BSD-2-Clause"
+  "license": "BSD-2-Clause",
+  "dependencies": {
+    "express": "^4.16.4"
+  }
 }
