--- a/lesson1/node-express/package.json
+++ b/lesson1/node-express/package.json
@@ -10,6 +10,7 @@
   "author": "Abhishek",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "morgan": "^1.9.1"
   }
 }
